Fixed some z-index issues, and trying to add a pre-load screen

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,13 @@
 body {
   margin: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 canvas {
   display: fixed;
   z-index: 1;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 /*# sourceMappingURL=main.css.map */
